tests/testdata/apache-acme-ipynb.err
  File "./ipynb.py", line 47
    'output': []
           ^
SyntaxError: invalid syntax
